Created /Api/Movies and /Api/Movies/Id endpoints. Basic exception handling. Added NuGet packages. Program.cs cleaning
/Api/Movies returns list of all movies, /Api/Movies/Id returns movie of a specified Id. Added Database representation: entities, dtos and database context. Registered services, AutoMapper, DbContext and Error Handling Middleware in Program.cs file. Included AutoMapper and EntityFramework in project. Cleaned Program.cs out of redundant comments

--- a/MoviesOnDemandBackend/appsettings.json
+++ b/MoviesOnDemandBackend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MoviesOnDemandDB": "Server=localhost;Database=MoviesOnDemandDB;User Id=sa;Password=Kokaina2137;TrustServerCertificate=true;"
+  }
 }
