--- a/MoviesOnDemandBackend/Properties/launchSettings.json
+++ b/MoviesOnDemandBackend/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "MoviesOnDemandBackend": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7045;http://localhost:5211",
       "environmentVariables": {
