Created /Api/Users/Register and /Api/Users/Login endpoints. Added new exception
Created necessary entities and dtos to represent users. UsersService registers a user and hashes their password and generates JWT for logged user. Added basic registration validation. If user not found throw 404 not found with message User not found, if wrong password throw 400 bad request (wrong password). Installed necessary NuGet packages for JWT implementation. Added new exception - bad request. Registered IUsersService in Program.cs. Removed redundant comments from Program.cs

--- a/MoviesOnDemandBackend/appsettings.json
+++ b/MoviesOnDemandBackend/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MoviesOnDemandDB": "Server=localhost;Database=MoviesOnDemandDB;User Id=sa;Password=Kokaina2137;TrustServerCertificate=true;"
-  }
+  },
+  "Token": "37SV@k98(!@j*zxB^%LrZ"
 }
