--- a/MoviesOnDemandBackend/MoviesOnDemandBackend.csproj
+++ b/MoviesOnDemandBackend/MoviesOnDemandBackend.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.1">
@@ -17,6 +18,10 @@
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.25.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations" />
     </ItemGroup>
 
 </Project>
